# demo-protected-static-site-with-django

./: .gitignore  README.md  manage.py  pyproject.toml  setup.cfg
domingues/protected_static_site/: asgi.py  settings.py  urls.py  wsgi.py
domingues/protected_static_site/core/: urls.py  views.py
domingues/protected_static_site/core/locale/en/LC_MESSAGES/: django.po
domingues/protected_static_site/core/templates/protected_static_site/: login.html  profile.html
