[metadata]
name = demo-protected-static-site-with-django
version = attr: domingues.protected_static_site.__version__
description = Protect a static site with user/password authentication.
url = https://github.com/domingues/demo-protected-static-site-with-django
license = Proprietary
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
python_requires = >=3.11
install_requires =
    Django~=4.2.0
    django-environ~=0.10.0
    django-debug-toolbar~=4.0.0
packages = domingues

[options.package_data]
* =
    *.po
    *.mo
    static/*
    static/**/*
    templates/*
    templates/**/*
    templates/**/**/*

[options.extras_require]
lint =
    flake8>=4.0.1
    flake8-broken-line
    flake8-bugbear
    flake8-builtins
    flake8-docstrings
    flake8-isort
    flake8-pep3101
    flake8-quotes
    flake8-rst-docstrings
    flake8-string-format
    pep8-naming
    flake8-django
    flake8-black
    black
    isort
stubs =
    django-stubs

[flake8]
; Black line length (88) + 10%
max-line-length = 96
inline-quotes = double
extend-ignore =
    # Missing Docstrings
    D1
    # Black compability
    E203
extend-exclude =
    venv
